k8s/q1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-dashboard-q1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-dashboard-q1
  template:
    metadata:
      labels:
        app: analytics-dashboard-q1
    spec:
      containers:
        - name: analytics-dashboard-q1
          image: swr.eu-de.otc.t-systems.com/anybill/analytics-dashboard-q1:sha-0f3c78db
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 300Mi
              cpu: 50m
            limits:
              memory: 300Mi
              cpu: 300m
      imagePullSecrets:
        - name: otcswr
