k8s/q1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-dashboard-q1
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: analytics-dashboard-q1
