k8s/q1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-dashboard-q1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - q1-data-prototype.stg.anybill.de
      secretName: data-prototype-q1-tls-secret-prod
  rules:
    - host: q1-data-prototype.stg.anybill.de
      http:
        paths:
          - backend:
              service:
                name: analytics-dashboard-q1
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-dashboard-q1-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - q1-data-prototype.stg.anybill.de
      secretName: data-prototype-q1-tls-secret-prod
  rules:
    - host: q1-data-prototype.stg.anybill.de
      http:
        paths:
          - backend:
              service:
                name: analytics-api
                port:
                  number: 80
            path: /api(/|$)(.*)
            pathType: ImplementationSpecific
